<resources>
    <string name="app_name">nexus</string>
    <string name="package_name">nexus.wangdaye.com.nexus</string>
    <string name="author_email">wangdayeeeeee@gmail.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- key words -->
    <string name="about_app">关于应用</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="dynamic">概览</string>
    <string name="group">分组</string>
    <string name="day_model">日间模式</string>
    <string name="night_model">夜间模式</string>
    <string name="search">搜索</string>
    <string name="notice">通知</string>

    <!-- navigation -->
    <string name="nav_home">主页</string>
    <string name="nav_message">消息</string>
    <string name="nav_find">发现</string>
    <string name="nav_account">个人</string>
    <string name="nav_model">昼/夜模式</string>
    <string name="nav_settings">@string/settings</string>
    <string name="nav_about">@string/about</string>

    <!-- menu -->
    <string name="action_search">@string/search</string>
    <string name="action_notice">@string/notice</string>

    <!-- settings key -->
    <string name="key_theme_color_main">theme_color_main</string>
    <string name="key_theme_color_accent">theme_color_accent</string>
    <string name="key_navigationBar_color_switch">navigationBar_color_switch</string>
</resources>
