<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_weico"
            android:title="@string/nav_home"
            android:checked="true"/>
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message"
            android:title="@string/nav_message" />
        <item
            android:id="@+id/nav_find"
            android:icon="@drawable/ic_search"
            android:title="@string/nav_find" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/nav_account" />

    </group>

    <item android:title="@string/about_app">

        <menu>

            <item
                android:id="@+id/nav_model"
                android:icon="@drawable/ic_model"
                android:title="@string/nav_model" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_information"
                android:title="@string/nav_about" />

        </menu>

    </item>

</menu>
